# yapdbr

./: CMakeLists.txt  LICENSE  README.md  atomgroup.cpp  atomgroup.hh  coordinates.cpp  coordinates.hh  main.c  main.cc  pdbfile.cpp  pdbfile.hh  pdbreader.cpp  pdbreader.h  pdbreader.hh  pdbwriter.cpp  pdbwriter.hh  testyapdbr.cpp  yapdbr.cpp  yapdbr.h  yapdbr.hh
.github/workflows/: github-ci.yml
examples/: main.cpp
include/: CMakeLists.txt  pdbreader.cpp  pdbreader.hh  yapdbr.cpp  yapdbr.hh
include/tests/: CMakeLists.txt  testyapdbr.cpp
tests/: CMakeLists.txt  testyapdbr.cpp
